# SEO_LD

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  ROADMAP.md  pyproject.toml
config/: keywords.yaml  seo_rules.yaml
scripts/: models.py
scripts/apply/: add_schema.py  create_redirects.py  generate_suggestions.py  rollback.py  update_alt_text.py  update_meta.py
scripts/audit/: crawl_shopify.py  detect_issues.py  fetch_gsc.py  fetch_pagespeed.py  parse_screaming_frog.py
scripts/report/: generate_report.py  ice_matrix.py
tests/: conftest.py
tests/apply/: test_add_schema.py  test_create_redirects.py  test_generate_suggestions.py  test_rollback.py
tests/audit/: test_crawl_shopify.py  test_detect_issues.py  test_fetch_gsc.py  test_fetch_pagespeed.py  test_parse_screaming_frog.py
tests/report/: test_ice_matrix.py
